<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_articles"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:minWidth="200dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:id="@+id/start_time">
        <TextView
            android:id="@+id/start_time_text"
            android:text="@string/begin_date"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_time_date"
            android:text="@string/anytime"
            android:paddingLeft="20dp"
            android:layout_toRightOf="@+id/start_time_text"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/categories"
        android:text="@string/categories"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingBottom="@dimen/filter_padding_bottom"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <CheckBox android:id="@+id/checkbox_arts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arts" />
        <CheckBox android:id="@+id/checkbox_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sports" />
        <CheckBox android:id="@+id/checkbox_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/style" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/filter_padding_bottom">
        <TextView
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/order_by" />
        <Spinner
            android:id="@+id/spinSort"
            android:layout_width="wrap_content"
            android:entries="@array/sorts_array"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/spinner_margin"
            android:layout_marginStart="@dimen/spinner_margin" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/done"
        android:id="@+id/btnDone"/>
</LinearLayout>